<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textViewReply"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_marginTop="104dp"
        android:background="@color/purple_700"
        android:text="Your Message received"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button2"
        android:layout_width="117dp"
        android:layout_height="70dp"
        android:layout_marginBottom="84dp"
        android:onClick="reply"
        android:text="REPLY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_Text"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="Enter your reply here"
        android:textStyle="bold|italic"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="87dp"
        android:layout_marginTop="44dp"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReply"
        android:gravity="center_horizontal" />
</androidx.constraintlayout.widget.ConstraintLayout>