<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
    android:id="@+id/button"
    android:layout_width="120dp"
    android:layout_height="67dp"
    android:onClick="send"
    android:text="SEND"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.91"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.853" />

    <EditText
        android:id="@+id/editTextSend"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:textStyle="bold|italic"
        android:hint="Enter your text here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewreply"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@color/purple_700"
        android:gravity="center_horizontal"
        android:text="Your Reply received"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="301dp"
        android:layout_height="81dp"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewreply" />
</androidx.constraintlayout.widget.ConstraintLayout>