package com.gcit.todo_4;

import  android.content.Context;

import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.junit.Assert.assertEquals;


/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class ActivityinputoutputTest {
    public static final String message = "this is a test";
    public static final String reply = "this is a reply";

        @Rule
        public ActivityScenarioRule<MainActivity> mActivityRule = new ActivityScenarioRule<MainActivity>(MainActivity.class);

        @Test
        public void useAppContext() {
            // Context of the app under test.
            Context appContext = InstrumentationRegistry.getInstrumentation().getTargetContext();
            assertEquals("com.gcit.todo_4", appContext.getPackageName());
        }
        @Test
        public void activityLaunch() {
            onView(withId(R.id.button)).perform(click());
            onView(withId(R.id.textViewReply)).check(matches(isDisplayed()));
            onView(withId(R.id.button2)).perform(click());
            onView(withId(R.id.textView3)).check(matches(isDisplayed()));
        }

        @Test
        public void textInputOutput() {
            onView(withId(R.id.editTextSend)).perform(typeText(message),closeSoftKeyboard());
            onView(withId(R.id.button)).perform(click());
            onView(withId(R.id.edit_Text)).perform(typeText(reply),closeSoftKeyboard());
            onView(withId(R.id.button2)).perform(click());
        }

}